--- a/downloads.html
+++ b/downloads.html
@@ -3,13 +3,13 @@
 	<title>BoltzmannTex</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta charset="UTF-8" />
-	<link rel="stylesheet" type="text/css" href="./_assets/main.css" />
+	<link rel="stylesheet" type="text/css" href="/_assets/main.css" />
 </head>
 
 <body>
 <div class="foreground">
 	<div class="title">
-		<img src="./_assets/logo_front.svg" alt="BoltzmannTex" />
+		<img src="/_assets/logo_front.svg" alt="BoltzmannTex" />
 	</div>
 	<hr style="display: none;" />
 	<div class="nav">
@@ -18,6 +18,7 @@
 		<a href="https://github.com/aghorui/boltzmanntex" target="_blank">Github</a>
 	</div>
 	<hr style="display: none;" />
+	<b>Warning: Site Still Under Construction</b>
 	<div class="body">
 		
 
