Update Website Links Again

--- a/downloads.html
+++ b/downloads.html
@@ -3,18 +3,18 @@
 	<title>BoltzmannTex</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta charset="UTF-8" />
-	<link rel="stylesheet" type="text/css" href="/_assets/main.css" />
+	<link rel="stylesheet" type="text/css" href="/boltzmanntex/_assets/main.css" />
 </head>
 
 <body>
 <div class="foreground">
 	<div class="title">
-		<img src="/_assets/logo_front.svg" alt="BoltzmannTex" />
+		<img src="/boltzmanntex/_assets/logo_front.svg" alt="BoltzmannTex" />
 	</div>
 	<hr style="display: none;" />
 	<div class="nav">
-		<a href="/">Home</a>
-		<a href="/downloads.html">Downloads</a>
+		<a href="/boltzmanntex/">Home</a>
+		<a href="/boltzmanntex/downloads.html">Downloads</a>
 		<a href="https://github.com/aghorui/boltzmanntex" target="_blank">Github</a>
 	</div>
 	<hr style="display: none;" />
