Add construction notice

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <head>
 	<title>BoltzmannTex</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="GUI Scientific Calculation Tools">
+	<meta name="keywords" content="oes, data, boltzmann">
+	<meta name="author" content="AG">
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="/boltzmanntex/assets/main.css" />
 </head>
@@ -18,7 +21,7 @@
 		<a href="https://github.com/aghorui/boltzmanntex" target="_blank">Github</a>
 	</div>
 	<hr style="display: none;" />
-	<b>Warning: Site Still Under Construction</b>
+	<div style="background: #FFD1D1; padding: 5px; font-weight: bold;">Warning: Website Still Under Construction</div>
 	<div class="body">
 		
 
