--- a/downloads.html
+++ b/downloads.html
@@ -2,6 +2,9 @@
 <head>
 	<title>BoltzmannTex</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<meta name="description" content="GUI Scientific Calculation Tools">
+	<meta name="keywords" content="oes, data, boltzmann">
+	<meta name="author" content="AG">
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="/boltzmanntex/assets/main.css" />
 </head>
@@ -18,23 +21,13 @@
 		<a href="https://github.com/aghorui/boltzmanntex" target="_blank">Github</a>
 	</div>
 	<hr style="display: none;" />
-	<b>Warning: Site Still Under Construction</b>
+	<div style="background: #FFD1D1; padding: 5px; font-weight: bold;">Warning: Website Still Under Construction</div>
 	<div class="body">
 		
 
 <h1>Downloads</h1>
 
-<h3>Latest Version: 0.4</h3>
-
-<ul>
-	<li><a href="">Download for Windows</a></li>
-	<li><a href="">Download for Linux</a></li>
-</ul>
-
-
-<h3>Previous Versions</h3>
-
-Previous versions can be downloaded from <a href="">here.</a>
+Downloads will be made available shortly
 
 
 	</div>
