Add title to download page

--- a/downloads.html
+++ b/downloads.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-	<title>BoltzmannTex</title>
+	<title> Downloads - BoltzmannTex</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="GUI Scientific Calculation Tools">
 	<meta name="keywords" content="oes, data, boltzmann">
