--- a/downloads.html
+++ b/downloads.html
@@ -4,6 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="GUI Scientific Calculation Tools">
 	<meta name="keywords" content="oes, data, boltzmann">
+	<link rel="icon" href="/favicon.ico" />
 	<meta name="author" content="AG">
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="/boltzmanntex/assets/main.css" />
@@ -27,7 +28,18 @@
 
 <h1>Downloads</h1>
 
-Downloads will be made available shortly
+<h3>Latest Version: 0.4.1</h3>
+
+<ul>
+	<li><a href="https://github.com/aghorui/boltzmanntex/releases/download/0.4.1/boltzmanntex-0.4.1-win32.zip">Download for Windows</a></li>
+</ul>
+
+Linux Builds will be made available shortly
+
+<h3>Previous Versions</h3>
+
+Previous versions can be downloaded from <a href="https://github.com/aghorui/boltzmanntex/releases">here.</a>
+
 
 
 	</div>
