--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1" />
 	<meta name="description" content="GUI Scientific Calculation Tools">
 	<meta name="keywords" content="oes, data, boltzmann">
-	<link rel="icon" href="/favicon.ico" />
+	<link rel="icon" href="/boltzmanntex/favicon.ico" />
 	<meta name="author" content="AG">
 	<meta charset="UTF-8" />
 	<link rel="stylesheet" type="text/css" href="/boltzmanntex/assets/main.css" />
