--- a/downloads.html
+++ b/downloads.html
@@ -27,13 +27,12 @@
 
 <h1>Downloads</h1>
 
-<h3>Latest Version: 0.4.1</h3>
+<h3>Latest Version: 0.4.2</h3>
 
 <ul>
-	<li><a href="https://github.com/aghorui/boltzmanntex/releases/download/0.4.1/boltzmanntex-0.4.1-win32.zip">Download for Windows</a></li>
+	<li><a href="https://github.com/aghorui/boltzmanntex/releases/download/0.4.2/BoltzmannTex-Windows-0.4.2-i686.zip">Download for Windows</a></li>
+	<li><a href="https://github.com/aghorui/boltzmanntex/releases/download/0.4.2/BoltzmannTex-Linux-0.4.2-x86_64.AppImage">Download for Generic Linux (AppImage)</a></li>
 </ul>
-
-Linux Builds will be made available shortly
 
 <h3>Previous Versions</h3>
 
